--- a/rocket-blog/assets/css/style.css
+++ b/rocket-blog/assets/css/style.css
@@ -1,4 +1,4 @@
-/* === GERAL ==================================*/
+/* === GERAL ===========================*/
 * {
   margin: 0;
   padding: 0;
@@ -7,208 +7,54 @@
 
 :root {
   font-size: 62.5%;
-  --purple-bg: #290742;
-  --dark-bg: #170027;
-  --button-bg: #9e6dc2;
-  --white: #fff;
-  --light-purple: #fbf6ff;
-  --green: #4fff4b;
 }
 
-html,
-body {
-  max-width: 100%;
-  max-height: 100%;
+.wrapper {
+  padding-inline: 2rem;
 }
 
 body {
   font-size: 1.6rem;
   font-family: 'Roboto';
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
+  text-align: center;
 }
 
 img {
   width: 100%;
 }
 
-.wrapper {
-  padding-inline: 13.5rem;
-}
-
-.title {
-  font-size: 2.4rem;
-  line-height: 3.6rem;
-  color: #290742;
-  margin-bottom: 1.5rem;
-}
-
-.subtitle {
-  font-size: 1.6rem;
-  line-height: 1.9rem;
-  color: #000000;
-  margin-top: 1.6rem;
-  margin-bottom: 1.5rem;
-}
-
-.blog-content {
-  font-size: 1.6rem;
-  line-height: 2.4rem;
-  color: #000000;
-}
-
-/* === HEADER ==================================*/
-#header {
+/* === NAVIGATION ===========================*/
+#navigation {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: var(--purple-bg);
   margin-inline: auto;
-  padding-block: 6.4rem;
+  padding-block: 2rem;
+  background: #290742;
 }
 
-#header ul {
-  display: flex;
-  gap: 3.2rem;
+/* === HOME ===========================*/
+#home {
+  margin-inline: auto;
+  padding-block: 1.5rem;
+  background: #290742;
 }
 
-#header ul li a {
-  font-size: 1.8rem;
-  line-height: 2.1rem;
-  color: #ffffff;
+#home h1 {
+  font-size: 2.8rem;
+  line-height: 100%;
+  color: #9e6dc2;
+  padding-top: 4rem;
+  padding-bottom: 7rem;
 }
 
-#header form {
+#home p {
   display: flex;
   align-items: center;
-}
-
-#header form input {
-  border: none;
-  border-radius: 0.4rem;
-  height: 4.7rem;
-  padding-left: 2.5rem;
-  padding-block: 1.4rem;
-  background: var(--dark-bg);
-  color: #fff;
-}
-
-#header form input:focus {
-  outline: 0;
-}
-
-#header form input::placeholder {
-  font-size: 1.4rem;
-  line-height: 1.6rem;
-  color: #fbf6ff;
-}
-
-#header button {
-  border: none;
-  background-color: #9e6dc2;
-}
-
-/* === HOME ==================================*/
-#home {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: 'home-content' 'image-main';
-  gap: 3rem;
-  background: var(--purple-bg);
-}
-
-#home-content {
-  grid-area: home-content;
-  text-align: left;
-  padding-bottom: 6.9rem;
-}
-
-#home-content h1 {
-  font-size: 3.6rem;
-  line-height: 5.4rem;
-  color: var(--button-bg);
-  margin-bottom: 1.6rem;
-}
-
-#home-content p {
+  gap: 0.9rem;
+  font-weight: 700;
   font-size: 1.8rem;
   line-height: 2.7rem;
-  color: #fbf6ff;
-}
-
-#cta {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-  color: var(--button-bg);
-  margin-top: 2.4rem;
-}
-
-#seta {
-  width: 2.4rem;
-  background: none;
-}
-
-#image-main {
-  width: 53.3rem;
-  height: 32.3rem;
-  display: block;
-  background: linear-gradient(
-    104.9deg,
-    rgba(239, 35, 243, 0.7) -2.03%,
-    rgba(195, 38, 228, 0.7) 27.04%,
-    rgba(139, 42, 209, 0.7) 67.97%,
-    rgba(92, 44, 193, 0.7) 107.39%
-  );
-  mix-blend-mode: screen;
-  border-radius: 0.8rem;
-}
-
-#image-main img {
-  position: relative;
-  z-index: -1;
-}
-
-#brake {
-  max-width: 100%;
-  height: 0.6rem;
-  background: #4fff4b;
-}
-
-#blog {
-  padding-top: 6rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 13rem;
-}
-
-#image-main-blog img {
-  width: 53.3rem;
-  height: 32.3rem;
-}
-
-#next-blog {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 5rem;
-}
-
-#posts {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 3rem;
-  padding-block: 6.7rem;
-  margin-inline: auto;
-}
-
-.post img {
-  width: 34rem;
+  color: #ffffff;
+  margin-top: 7rem;
 }
